--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
     <head>
         <title>CSCSE 190: Tsbih Salman </title>
-
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Tsbih Salman CSCE 190</h1>
 
         <!-- Probelem Statement assignment-->
         <section class="assignment"> 
-            <a href="files/CSCE190.ProblemStatement.pdf"><img src="images/Screen Shot .png" width="560" height="550">
+            <a href="files/CSCE190.ProblemStatement.pdf"><img src="images/Screen Shot .png" >
             <section class="ass-details">
                 <a href="files/CSCE190.ProblemStatement.pdf"><h2>Problem statement pdf</h2></a>
                 <p>
@@ -22,11 +22,21 @@
 
         <!-- Affinity Diagram assignment-->
         <section class="assignment"> 
-            <a href="files/affinity-diagram.pdf "><img src="images/diagram .png" width="600" height="500">
+            <a href="files/affinity-diagram.pdf "><img src="images/diagram .png" >
             <section class="ass-details">
                 <a href="files/affinity-diagram.pdf"><h2>Affinity Diagram pdf</h2></a>
                 <p>
                     Team project brainstorm
+                </p> 
+            </section>
+
+            <!-- Personna assignment-->
+        <section class="assignment"> 
+            <a href="files/personna.pdf "><img src="images/personna .png" >
+            <section class="ass-details">
+                <a href="files/personna.pdf"><h2>Personna</h2></a>
+                <p>
+                    A personna of a typical train map user.
                 </p> 
             </section>
      </section>
