--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 
             <!-- Personna assignment-->
         <section class="assignment"> 
-            <a href="files/personna.pdf "><img src="images/personna .png" >
+            <a href="files/personna_team.pdf  "><img src="images/personna .png" >
             <section class="ass-details">
-                <a href="files/personna.pdf"><h2>Personna</h2></a>
+                <a href="files/personna_team.pdf"><h2>Personna</h2></a>
                 <p>
                     A personna of a typical train map user.
                 </p> 
