--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     Team project brainstorm
                 </p> 
             </section>
-
+        </section>
             <!-- Personna assignment-->
         <section class="assignment"> 
             <a href="files/personna_team.pdf  "><img src="images/personna .png" >
@@ -40,6 +40,16 @@
                 </p> 
             </section>
      </section>
+     <!-- Storyboard assignment-->
+     <section class="assignment"> 
+        <a href="files/AXD Storyboards.pdf  "><img src="images/storyboard.png" >
+        <section class="ass-details">
+            <a href="files/AXD Storyboards.pdf"><h2>Storyboard</h2></a>
+            <p>
+               Team Storyboard.
+            </p> 
+        </section>
+ </section>
 
     </body>
 </html>
