--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <section class="assignment"> 
             <a href="files/CSCE190.ProblemStatement.pdf"><img src="images/Screen Shot .png" >
             <section class="ass-details">
-                <a href="files/CSCE190.ProblemStatement.pdf"><h2>Problem statement pdf</h2></a>
+                <a href="files/CSCE190.ProblemStatement.pdf"><h2>Problem statement </h2></a>
                 <p>
                     Everyone who lives in Columbia or any city with major train lines running through it knows the pain of waiting for a slow train and showing up to your destination 20 minutes late. The problem is not knowing the train schedules throughout Columbia and being late because of them. The problem is more specifically not knowing the optimal route to get to you destination while taking train delays into consideration.
                 </p>
@@ -24,7 +24,7 @@
         <section class="assignment"> 
             <a href="files/affinity-diagram.pdf "><img src="images/diagram .png" >
             <section class="ass-details">
-                <a href="files/affinity-diagram.pdf"><h2>Affinity Diagram pdf</h2></a>
+                <a href="files/affinity-diagram.pdf"><h2>Affinity Diagram </h2></a>
                 <p>
                     Team project brainstorm
                 </p> 
@@ -46,7 +46,17 @@
         <section class="ass-details">
             <a href="files/AXD Storyboards.pdf"><h2>Storyboard</h2></a>
             <p>
-               Team Storyboard.
+                A comic strip illustrating the need for a train traffic app.
+            </p> 
+        </section>
+ </section>
+     <!-- AppSketch assignment-->
+     <section class="assignment"> 
+        <a href="files/AppSketches AXD.pdf  "><img src="images/AppSketch.png" >
+        <section class="ass-details">
+            <a href="files/AppSketches AXD.pdf"><h2>AppSketches</h2></a>
+            <p>
+                A sketch of potential app solutions for train traffic problems.
             </p> 
         </section>
  </section>
