--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
         <section class="ass-details">
             <a href="files/AppSketches AXD.pdf"><h2>AppSketches</h2></a>
             <p>
-                A sketch of potential app solutions for train traffic problems.
+                A rough ideas of how our project application may look like.
             </p> 
         </section>
- </section>
+ </section> 
 
     </body>
 </html>
