--- a/index.html
+++ b/index.html
@@ -71,16 +71,17 @@
         <a href="https://www.youtube.com/watch?v=0ydggwQg7Oo&ab_channel=TsbihSalman ">
             <img src="images/Prototype.png" >
             <p>
-                A paper walkthrough our team worked on to show how the user might use the app.  
+                A paper walkthrough that I and my team worked on to show how the user might use the app.  
     </section> 
      <!-- Hi- Fi Prototype assignment-->
      <section class="assignment"> 
-        <a href="files/Apps/App/src/index.html">
+        <a href="files/HighFiPrototype/fullscreen.html">
             <h2>Hi-Fi Prototype</h2></a>
-        <a href="files/Apps/App/src/index.html">
+        <a href="files/HighFiPrototype/fullscreen.html">
             <img src="images/hi-fi.png" >
             <p>
-                A paper walkthrough our team worked on to show how the user might use the app.  
+                A Hi-Fi product that I and my team created to show how users will use the app.
+                 
     </section> 
 </div>
 
