--- a/index.html
+++ b/index.html
@@ -75,10 +75,12 @@
     </section> 
      <!-- Hi- Fi Prototype assignment-->
      <section class="assignment"> 
-        <a href="files/HighFiPrototype/fullscreen.html">
-            <h2>Hi-Fi Prototype</h2></a>
-        <a href="files/HighFiPrototype/fullscreen.html">
-            <img src="images/hi-fi.png" >
+        <a href="files/HighFiPrototype/preview.html">
+            <h2>Hi-Fi Prototype: Train Tracker App</h2>
+        </a>
+                <a href="files/HighFiPrototype/preview.html">
+                    <img src="images/HighFiPrototype.png" width="350px"/>
+                </a>
             <p>
                 A Hi-Fi product that I and my team created to show how users will use the app.
                  
